--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 	<body>
 		<h1>Welcome!</h1>
 		<p>This is a sample repository! Do whatever you need to it!</p>
+		<p>This is a test!</p>
 	</body>
 </html>
