--- a/Resume.html
+++ b/Resume.html
@@ -53,5 +53,7 @@
 		<div id="footer">
 			<p>205 S Elm Dr. Beverly Hills, CA 213-246-1357</p>
 		</div>
+		 <script type='text/javascript' src='Resume.js'></script>
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 	</body>
 </html>
