--- a/Resume.html
+++ b/Resume.html
@@ -8,7 +8,7 @@
 			<p id="name">Alex Suh</p>
 			<a href="alexsuhdude22@gmail.com"><p id="email">alexsuhdude22@gmail.com</p></a>
 		</div>
-		<div class="left"><img src="https://encrypted-tbn3.gstatic.com/images?q=tbn:ANd9GcT0naaU5fhSxvPmk52PkSaY0AQRRH5krVmPZivELAfSP7uWCpB3"/></div>
+		<div class="left"><img id="img" src="https://encrypted-tbn3.gstatic.com/images?q=tbn:ANd9GcT0naaU5fhSxvPmk52PkSaY0AQRRH5krVmPZivELAfSP7uWCpB3"/></div>
 		<div class="right">
 			<h4>Objective</h4>
 			<p>I want to work in a hospital as a doctor.</p>
