--- a/Resume.html
+++ b/Resume.html
@@ -53,7 +53,12 @@
 		<div id="footer">
 			<p>205 S Elm Dr. Beverly Hills, CA 213-246-1357</p>
 		</div>
-		 <script type='text/javascript' src='Resume.js'></script>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
+<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.7.2/jquery-ui.min.js"></script>
+		 <script type='text/javascript' src='Resume.js'></script>
+		
 	</body>
 </html>
