--- a/Resume.html
+++ b/Resume.html
@@ -51,7 +51,7 @@
 			</p>
 		</div>
 		<div id="footer">
-			<p>205 S Elm Dr. Beverly Hills, CA 213-246-1357</p>
+			<p id="addy">205 S Elm Dr. Beverly Hills, CA 213-246-1357</p>
 		</div>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
